--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -36,3 +36,13 @@ plot(LENGTH~NECK,data=bears)
 abline(simp)
 summary.lm(simp)
 ```
+
+Residual standard error: 4.939 on 52 degrees of freedom 72 Multiple R-squared:0.791, Adjusted R-squared:0.7869.
+
+
+
+
+
+
+
+
