--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -74,3 +74,11 @@ summary.lm(age)
 ```
 
 Residual standard error: 7.5 on 52 degrees of freedom, Adjusted R-Squared: 0.50.
+
+```{r}
+weight <- lm(LENGTH~WEIGHT,data=bears)
+plot(LENGTH~WEIGHT,data=bears)
+abline(weight)
+summary.lm(weight)
+```
+
